--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ tr:nth-child(even) {
 
   <h2>HTML Table</h2>
 
-<table>
+<table width="50%">
   <tr>
     <th>Tên</th>
     <th>Năm Sinh</th>
@@ -39,7 +39,7 @@ tr:nth-child(even) {
     <td><input type="text" id="year" name="fname"></td>
     <td>
       <input type="radio" id="nam" name="nam" value="nam">
-        <label for="Nam</label><br>
+        <label for="nam">Nam</label><br>
         <input type="radio" id="nu" name="nu" value="nu">
         <label for="nu">Nữ</label><br>  
     </td>
