--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@ tr:nth-child(even) {
     <td><input type="text" id="name" name="fname"></td>
     <td><input type="text" id="year" name="fname"></td>
     <td>
-      <input type="radio" id="nam" name="nam" value="nam">
+      <input type="radio" id="gioiTinh" name="gioitinh" value="gioitinh">
         <label for="nam">Nam</label><br>
         <input type="radio" id="nu" name="nu" value="nu">
         <label for="nu">Nữ</label><br>  
     </td>
   </tr>
   <tr>
-    <td><button onclick="Cal()">Tìm</button></td>
+    <td><button onclick="Tinh()">Tìm</button></td>
     <td></td>
     <td></td>
   </tr>
