--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ tr:nth-child(even) {
     </td>
   </tr>
   <tr>
-    <td><button onclick="Tinh()">Tìm</button></td>
+    <td>
+      <button onclick="tinhToan()">Tính Toán</button>
+    </td>
     <td></td>
     <td></td>
   </tr>
