--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@ tr:nth-child(even) {
  
 </table>
 
-  <script src="script.js"></script>
+  <script src="script.js">
+    function sayHello() {
+  alert("Chào mừng bạn đến với website đầu tiên!");
+}
+
+var ten = document.getElementById("name").value;
+var tuoi = document.getElementById("year").value;
+var gioiTinh = document.getElementById("gioiTinh").value;
+var gioiTinhCal = gioiTinh == "nam"?"Nam": "Nữ";
+
+function tinhToan(
+  alert("Tên: "+ ten + ", Tuổi: " + tuoi + ", Giới tính: " + gioiTinhCal );
+)
+  </script>
 </body>
 </html>
