--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@ tr:nth-child(even) {
     <th>Giới Tính</th>
   </tr>
   <tr>
-    <td><input type="text" id="name" name="fname"></td>
-    <td><input type="text" id="year" name="fname"></td>
+    <td><input type="text" id="name" name="name"></td>
+    <td><input type="text" id="year" name="year"></td>
     <td>
       <input type="radio" id="gioiTinh" name="gioitinh" value="gioitinh">
-        <label for="nam">Nam</label><br>
-        <input type="radio" id="nu" name="nu" value="nu">
+        <label for="gioiTinh">Nam</label><br>
+        <input type="radio" id="gioiTinh" name="nu" value="nu">
         <label for="nu">Nữ</label><br>  
     </td>
   </tr>
