--- a/index.html
+++ b/index.html
@@ -1,61 +1,76 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>Trang Web Đầu Tiên</title>
-  <style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+<!doctype html>
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Sao Hạn</title>
+        <!-- Load external CSS styles -->
+        <link rel="stylesheet" href="styles.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-</head>
-<body>
-  <h1>Xin chào!</h1>
-  <p>Đây là website đầu tiên của tôi.</p>
-  <button onclick="sayHello()">Bấm vào tôi!</button>
+    </head>
+    <body>
+         <h1>Sao Hạn!</h1> 
 
-  <h2>HTML Table</h2>
-
+<label id="row"></label>  
+<br/>
 <table width="50%">
   <tr>
     <th>Tên</th>
-    <th>Năm Sinh</th>
+    <th><input type="text" id="name" name="name" style="width:97%"></th>
+   
+  </tr>
+  <tr>
+    <td>Năm Sinh
+    </td>
+    <td>        
+        <input type="number" min="1900" max="2030" step="1" id="year" name="year"/>
+    </td>
+  <tr>
     <th>Giới Tính</th>
-  </tr>
-  <tr>
-    <td><input type="text" id="name" name="name"></td>
-    <td><input type="text" id="year" name="year"></td>
-    <td>
-      <input type="radio" id="gioiTinh" name="gioitinh" value="gioitinh">
-        <label for="gioiTinh">Nam</label><br>
-        <input type="radio" id="gioiTinh" name="nu" value="nu">
-        <label for="nu">Nữ</label><br>  
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <button onclick="tinhToan()">Tính Toán</button>
-    </td>
-    <td></td>
-    <td></td>
+    <th>
+      <input type="radio" id="nam" name="gioitinh" value="NAM">
+        <label for="nam">Nam</label>
+        <input type="radio" id="nu" name="gioitinh" value="NU">
+        <label for="nu">Nữ</label> 
+    </th>    
   </tr>
  
+  <tr>
+    <td>
+      <button onclick="tinhToan()" class="button-input">Nhập</button>
+    </td>   
+  </tr>
+  <tr>
+    <th>
+       <button onclick="exportToExcel()" class="button-export" >Export to Excel</button>
+    </th>
+     </tr>
+</table>
+       
+<h2>Danh Sách</h2>
+
+<table id="myGrid" width="100%">
+  <thead>
+    <tr>
+      <th>Họ tên</th>
+      <th>Giới tính</th>
+      <th>Tuổi</th>
+      <th>Năm Âm Lịch</th>
+      <th>Sao</th>
+      <th>Hạn</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- Dữ liệu sẽ được thêm tại đây -->
+  </tbody>
 </table>
 
-  <script src="script.js">
-   
-  </script>
-</body>
+
+
+        <!-- Load external JavaScript -->
+        <script src="scripts.js"></script>
+        
+    </body>
+
 </html>
