--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
         <!-- Load external JavaScript -->
-        <script src="scripts.js"></script>
+        <script src="script.js"></script
         
     </body>
 
