--- a/index.html
+++ b/index.html
@@ -1,64 +1,74 @@
 <!doctype html>
+
 <html>
-   <head>
-      <meta charset="utf-8">
-      <title>Sao Hạn</title>
-      <!-- Load external CSS styles -->
-      <link rel="stylesheet" href="styles.css">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-   </head>
-   <body>
-      <h1>Sao Hạn!</h1>
-      <label id="row"></label>  
-      <br/>
-      <table width="50%">
-         <tr>
+
+<head>
+    <meta charset="utf-8">
+    <title>Sao Hạn</title>
+    <!-- Load external CSS styles -->
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+</head>
+
+<body>
+    <h1>Sao Hạn!</h1>
+
+    <table width="50%" class="example">
+        <tr>
             <th>Tên</th>
             <th><input type="text" id="name" name="name" style="width:97%"></th>
-         </tr>
-         <tr>
+
+        </tr>
+        <tr>
             <td>Năm Sinh
             </td>
-            <td>        
-               <input type="number" min="1900" max="2030" step="1" id="year" name="year"/>
+            <td>
+                <input type="number" min="1900" max="2030" step="1" id="year" name="year" />
             </td>
-         <tr>
+        <tr>
             <th>Giới Tính</th>
             <th>
-               <input type="radio" id="nam" name="gioitinh" value="NAM">
-               <label for="nam">Nam</label>
-               <input type="radio" id="nu" name="gioitinh" value="NU">
-               <label for="nu">Nữ</label> 
+                <input type="radio" id="nam" name="gioitinh" value="NAM" checked>
+                <label for="nam">Nam</label>
+                <input type="radio" id="nu" name="gioitinh" value="NU">
+                <label for="nu">Nữ</label>
             </th>
-         </tr>
-         <tr>
+        </tr>
+
+        <tr>
             <td>
-               <button onclick="tinhToan()" class="button-input">Nhập</button>
+                <button onclick="tinhToan()" class="button-input">Nhập</button>
             </td>
-         </tr>
-         <tr>
+        </tr>
+        <tr>
             <th>
-               <button onclick="exportToExcel()" class="button-export" >Export to Excel</button>
+                <button onclick="exportToExcel()" class="button-export">Export to Excel</button>
             </th>
-         </tr>
-      </table>
-      <h2>Danh Sách</h2>
-      <table id="myGrid" width="100%">
-         <thead>
-            <tr>
-               <th>Họ tên</th>
-               <th>Giới tính</th>
-               <th>Tuổi</th>
-               <th>Năm Âm Lịch</th>
-               <th>Sao</th>
-               <th>Hạn</th>
-            </tr>
-         </thead>
-         <tbody>
-            <!-- Dữ liệu sẽ được thêm tại đây -->
-         </tbody>
-      </table>
-      <!-- Load external JavaScript -->
-      <script src="script.js"></script
-   </body>
+        </tr>
+    </table>
+
+    <h2>Danh Sách</h2>
+    <div style="height: 500px; overflow: auto;width: 720px;">
+        <table id="myGrid" width="100%">
+            <thead>
+                <tr>
+                    <th>STT</th>
+                    <th>Họ tên</th>
+                    <th>Giới tính</th>
+                    <th>Tuổi</th>
+                    <th>Năm Âm Lịch</th>
+                    <th>Sao</th>
+                    <th>Hạn</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Dữ liệu sẽ được thêm tại đây -->
+            </tbody>
+        </table>
+    </div>
+    <!-- Load external JavaScript -->
+    <script src="scripts.js"></script>
+</body>
+
 </html>
