--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <table width="50%" class="example">
         <tr>
             <th>Tên</th>
-            <th><input type="text" id="name" name="name" style="width:97%"></th>
+            <th><input type="text" id="name" name="name" style="width:97%; text-transform:capitalize;"></th>
 
         </tr>
         <tr>
-            <td>Năm Sinh
+            <td>Năm Sinh: <input type="number" min="1900" max="2030" step="1" id="year" name="year" />
             </td>
             <td>
-                <input type="number" min="1900" max="2030" step="1" id="year" name="year" />
+                Tuổi: <input type="number" min="1" max="150" step="1" id="tuoi" name="tuoi" />
             </td>
         <tr>
             <th>Giới Tính</th>
@@ -56,8 +56,9 @@
                     <th>STT</th>
                     <th>Họ tên</th>
                     <th>Giới tính</th>
-                    <th>Tuổi</th>
                     <th>Năm Âm Lịch</th>
+                    <th>Năm Sinh</th>
+                    <th>Tuổi</th>
                     <th>Sao</th>
                     <th>Hạn</th>
                 </tr>
@@ -68,7 +69,7 @@
         </table>
     </div>
     <!-- Load external JavaScript -->
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
