--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
         </tr>
         <tr>
-            <td>Năm Sinh: <input type="number" min="1900" max="2030" step="1" id="year" name="year" />
+            <td>
+                Năm Sinh: <input type="number" min="1900" max="2030" step="1" id="year" name="year" onchange="getTuoi()" />
             </td>
             <td>
-                Tuổi: <input type="number" min="1" max="150" step="1" id="tuoi" name="tuoi" />
+                Tuổi: <input type="number" min="1" max="150" step="1" id="tuoi" name="tuoi" onchange="getNam()" />
             </td>
         <tr>
             <th>Giới Tính</th>
